--- a/login.html
+++ b/login.html
@@ -315,7 +315,7 @@ label:hover:before {
 </style>
 <script type="application/javascript">
 	var obj="";
-	const route="http://www.servicioscoominobras.com/administrador/index.html";
+	const route="http://www.coominobras.com.co/Simuladores/admin/index.html";
 	function validate(e){
 		e.preventDefault();
 		var login=new Array();
